syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityString.proto";


message AbilityScalarValueEntry {
	float float_value = 3;
	AbilityString key = 1;
}